--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "core-js": "^3.30.2",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.21.8",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
     "@vue/compiler-sfc": "^3.3.4",
-    "@babel/eslint-parser": "^7.21.8",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.4.1",
-    "eslint-plugin-vue": "^9.14.0"
+    "eslint-plugin-vue": "^9.14.0",
+    "postcss": "^8.4.45",
+    "tailwindcss": "^3.4.10"
   },
   "eslintConfig": {
     "root": true,
