--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "node": "18.x"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "core-js": "^3.30.2",
+    "flowbite": "^2.5.1",
+    "flowbite-vue": "^0.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.4.3"
   },
